# PerDeepKE

./: .gitignore  LICENSE  README.md  __init__.py  keyword_extraction.py  pyproject.toml  stop_words.txt
PerDeepKE.egg-info/: PKG-INFO  SOURCES.txt
src/PerDeepKE/: keyword_extraction.py  requirements.txt
src/PerDeepKE.egg-info/: SOURCES.txt  top_level.txt
